--- a/lab.html
+++ b/lab.html
@@ -218,7 +218,7 @@
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/daeun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
-			<h5>Daeun Lee</h5>
+			<h5><a href="https://www.linkedin.com/in/da-eun-lee-9a369427b" target="_blank">Daeun Lee</a></h5>
 			2025 Spring - current<br>
 			Master's student<br>
 		</div>
@@ -233,6 +233,12 @@
 			<h5><a href="https://cubec.link/" target="_blank">Jaeyun Jung</a></h5>
 			2025 Fall - current<br>
 			Master's student<br>
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/g1.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5>Jiwon Yu</h5>
+			2025 Fall - current<br>
+			Robot<br>
 		</div>
 	</div>
 </div>
