--- a/lab.html
+++ b/lab.html
@@ -238,7 +238,7 @@
 			<img src="source/members/g1.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5>Jiwon Yu</h5>
 			2025 Fall - current<br>
-			A robot with tactile hands<br>
+			A humanoid with tactile hands<br>
 		</div>
 	</div>
 </div>
