update wacv2025 paper

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Ghimire_OneCycle_WACV_2025">
+			<img src="publications/data/25_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">One-Cycle Structured Pruning via Stability-Driven Subnetwork Search</h4>
+			<p class="text-muted">
+				Deepak Ghimire, Dayoung Kil, Seonghwan Jeong, <b>Jaesik Park</b>, and Seong-Heum Kim.
+				<em>Winter Conf. on Applications of Computer Vision (<b>WACV</b>), 2025</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2501.13439" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ghimire_OneCycle_WACV_2025_bibtex_button" aria-expanded="false" aria-controls="Ghimire_OneCycle_WACV_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Ghimire_OneCycle_WACV_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Ghimire_OneCycle_WACV_2025,<br>
+							Title={One-Cycle Structured Pruning via Stability-Driven Subnetwork Search},<br>
+							Author={Deepak Ghimire and Dayoung Kil and Seonghwan Jeong and Jaesik Park and Seong-Heum Kim},<br>
+							Journal={Winter Conf. on Applications of Computer Vision (WACV)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Jeon_TreeGuided_arXiv_2025">
 			<img src="publications/data/25_arxiv8.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Tree-Guided Diffusion Planner</h4>
@@ -466,32 +492,6 @@
 							Title={Designing Concise ConvNets with Columnar Stages},<br>
 							Author={Ashish Kumar and Jaesik Park},<br>
 							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Ghimire_Onecycle_arXiv_2025">
-			<img src="publications/data/25_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">One-cycle Structured Pruning with Stability Driven Structure Search</h4>
-			<p class="text-muted">
-				Deepak Ghimire, Dayoung Kil, Seonghwan Jeong, <b>Jaesik Park</b>, and Seong-Heum Kim.
-				<em>2501.13439 (arXiv), 2025</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2501.13439" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ghimire_Onecycle_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Ghimire_Onecycle_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Ghimire_Onecycle_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Ghimire_Onecycle_arXiv_2025,<br>
-							Title={One-cycle Structured Pruning with Stability Driven Structure Search},<br>
-							Author={Deepak Ghimire and Dayoung Kil and Seonghwan Jeong and Jaesik Park and Seong-Heum Kim},<br>
-							Journal={2501.13439 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
