--- a/publications.html
+++ b/publications.html
@@ -4698,23 +4698,23 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4 text-center" id="Hwang_Multimodal_CVPR_2015">
+		<div class="col-lg-4 text-center" id="Hwang_Multispectral_CVPR_2015">
 			<img src="publications/data/15_cvpr_pd.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines</h4>
+			<h4 class="em-tight">Multispectral Pedestrian Detection: Benchmark Dataset and Baselines</h4>
 			<p class="text-muted">
 				SoonMin Hwang, <b>Jaesik Park</b>, Namil Kim, Yukyung Choi, and In So Kweon.
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2015</em>
 			</p>
 			<p>
 				<a href="https://sites.google.com/site/pedestrianbenchmark/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Hwang_Multimodal_CVPR_2015_bibtex_button" aria-expanded="false" aria-controls="Hwang_Multimodal_CVPR_2015_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Hwang_Multispectral_CVPR_2015_bibtex_button" aria-expanded="false" aria-controls="Hwang_Multispectral_CVPR_2015_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Hwang_Multimodal_CVPR_2015_bibtex_button">
+			<div class="collapse" id="Hwang_Multispectral_CVPR_2015_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Hwang_Multimodal_CVPR_2015,<br>
-							Title={Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines},<br>
+							@inproceedings{Hwang_Multispectral_CVPR_2015,<br>
+							Title={Multispectral Pedestrian Detection: Benchmark Dataset and Baselines},<br>
 							Author={SoonMin Hwang and Jaesik Park and Namil Kim and Yukyung Choi and In So Kweon},<br>
 							Booktitle={Proceedings of the Int. Conf. on Computer Vision and Pattern Recognition (CVPR)},<br>
 							Year={2015}<br>
