neurips accepted papers

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
+					2025.08. Four papers about <a href="publications.html#Lee_OpenBox_NeurIPS_2025">3D anotation</a>, <a href="publications.html#Kim_MetropolisHastings_NeurIPS_2025">GS sampling</a>, <a href="publications.html#Musacchio_Holistic_NeurIPS_2025">order prediction</a>, and <a href="publications.html#Jeon_TreeGuided_NeurIPS_2025">diffusion planner</a> are accepted to <b>NeurIPS 2025</b>.
+				</li>
+				<li class="list-group-item">
 					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a highlight paper at <b>ICCV 2025</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.02. Three papers about <a href="publications.html#Kim_ShowMak3r_CVPR_2025">dynamic scene reconstruction</a> and <a href="publications.html#Kim_Improving_CVPR_2025">image generation</a> are accepted to <b>CVPR 2025</b>.
 				</li>
-				<li class="list-group-item">
-					2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
+					</li>
 					<li class="list-group-item">
 						2025.01. Two papers (<a href="publications.html#Shin_Localityaware_ICLR_2025">3D Gaussian compression</a> & <a href="publications.html#Kumar_Designing_ICLR_2025">ConvNet design in 2025</a>) are accepted to <b>ICLR 2025</b>.
 					</li>
