--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,110 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Lee_OpenBox_NeurIPS_2025">
+			<img src="publications/data/25_neurips1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>OpenBox: Annotate Any Bounding Boxes in 3D</h4>
+			<p class="text-muted">
+				In-Jae Lee, Mungyeom Kim, Kwonyoung Ryu, Pierre Musacchio, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_OpenBox_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_OpenBox_NeurIPS_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_OpenBox_NeurIPS_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lee_OpenBox_NeurIPS_2025,<br>
+							Title={OpenBox: Annotate Any Bounding Boxes in 3D},<br>
+							Author={In-Jae Lee and Mungyeom Kim and Kwonyoung Ryu and Pierre Musacchio and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Neural Information Processing Systems (NeurIPS)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Jeon_TreeGuided_NeurIPS_2025">
+			<img src="publications/data/25_arxiv8.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Tree-Guided Diffusion Planner</h4>
+			<p class="text-muted">
+				Hyeonseong Jeon, Cheolhong Min, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2025</em>
+			</p>
+			<p>
+				<a href="https://tree-diffusion-planner.github.io" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2508.21800" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeon_TreeGuided_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Jeon_TreeGuided_NeurIPS_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jeon_TreeGuided_NeurIPS_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Jeon_TreeGuided_NeurIPS_2025,<br>
+							Title={Tree-Guided Diffusion Planner},<br>
+							Author={Hyeonseong Jeon and Cheolhong Min and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Neural Information Processing Systems (NeurIPS)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Musacchio_Holistic_NeurIPS_2025">
+			<img src="publications/data/25_neurips2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Holistic Order Prediction in Natural Scenes</h4>
+			<p class="text-muted">
+				Pierre Musacchio, Hyunmin Lee, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Musacchio_Holistic_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Musacchio_Holistic_NeurIPS_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Musacchio_Holistic_NeurIPS_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Musacchio_Holistic_NeurIPS_2025,<br>
+							Title={Holistic Order Prediction in Natural Scenes},<br>
+							Author={Pierre Musacchio and Hyunmin Lee and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Neural Information Processing Systems (NeurIPS)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kim_MetropolisHastings_NeurIPS_2025">
+			<img src="publications/data/25_arxiv6.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Metropolis-Hastings Sampling for 3D Gaussian Reconstruction</h4>
+			<p class="text-muted">
+				Hyunjin Kim, Haebeom Jung, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2025</em>
+			</p>
+			<p>
+				<a href="https://hjhyunjinkim.github.io/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2506.12945" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_MetropolisHastings_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_MetropolisHastings_NeurIPS_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_MetropolisHastings_NeurIPS_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kim_MetropolisHastings_NeurIPS_2025,<br>
+							Title={Metropolis-Hastings Sampling for 3D Gaussian Reconstruction},<br>
+							Author={Hyunjin Kim and Haebeom Jung and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Neural Information Processing Systems (NeurIPS)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Ghimire_OneCycle_WACV_2025">
 			<img src="publications/data/25_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">One-Cycle Structured Pruning via Stability-Driven Subnetwork Search</h4>
@@ -82,37 +186,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Ghimire_OneCycle_WACV_2025,<br>
+							@inproceedings{Ghimire_OneCycle_WACV_2025,<br>
 							Title={One-Cycle Structured Pruning via Stability-Driven Subnetwork Search},<br>
 							Author={Deepak Ghimire and Dayoung Kil and Seonghwan Jeong and Jaesik Park and Seong-Heum Kim},<br>
-							Journal={Winter Conf. on Applications of Computer Vision (WACV)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Jeon_TreeGuided_arXiv_2025">
-			<img src="publications/data/25_arxiv8.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Tree-Guided Diffusion Planner</h4>
-			<p class="text-muted">
-				Hyeonseong Jeon, Cheolhong Min, and <b>Jaesik Park</b>.
-				<em>2508.21800 (arXiv), 2025</em>
-			</p>
-			<p>
-				<a href="https://tree-diffusion-planner.github.io" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="https://arxiv.org/abs/2508.21800" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeon_TreeGuided_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jeon_TreeGuided_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Jeon_TreeGuided_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Jeon_TreeGuided_arXiv_2025,<br>
-							Title={Tree-Guided Diffusion Planner},<br>
-							Author={Hyeonseong Jeon and Cheolhong Min and Jaesik Park},<br>
-							Journal={2508.21800 (arXiv)},<br>
+							Booktitle={Proceedings of the Winter Conf. on Applications of Computer Vision (WACV)},<br>
 							Year={2025}<br>
 							}
 						</p>
@@ -249,33 +326,6 @@
 							Title={Leveraging Learned Image Prior for 3D Gaussian Compression},<br>
 							Author={Seungjoo Shin and Jaesik Park and Sunghyun Cho},<br>
 							Booktitle={Proceedings of the Workshop on Efficient Computing under Limited Resources (ECLR) ICCV workshop},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Kim_MetropolisHastings_arXiv_2025">
-			<img src="publications/data/25_arxiv6.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Metropolis-Hastings Sampling for 3D Gaussian Reconstruction</h4>
-			<p class="text-muted">
-				Hyunjin Kim, Haebeom Jung, and <b>Jaesik Park</b>.
-				<em>2506.12945 (arXiv), 2025</em>
-			</p>
-			<p>
-				<a href="https://hjhyunjinkim.github.io/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="https://arxiv.org/abs/2506.12945" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_MetropolisHastings_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_MetropolisHastings_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kim_MetropolisHastings_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kim_MetropolisHastings_arXiv_2025,<br>
-							Title={Metropolis-Hastings Sampling for 3D Gaussian Reconstruction},<br>
-							Author={Hyunjin Kim and Haebeom Jung and Jaesik Park},<br>
-							Journal={2506.12945 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
