--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,7 @@
 			<p class="text-muted">
 				In-Jae Lee, Mungyeom Kim, Kwonyoung Ryu, Pierre Musacchio, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2025</em>
+				<br>(Accepted as a <b>spotlight</b> paper)
 			</p>
 			<p>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_OpenBox_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_OpenBox_NeurIPS_2025_bibtex_button">BibTeX</a>
