update pierre's homepage

--- a/lab.html
+++ b/lab.html
@@ -156,7 +156,7 @@
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
-			<h5><a href="https://www.linkedin.com/in/pierre-musacchio-605092217" target="_blank">Pierre E. Musacchio</a></h5>
+			<h5><a href="https://pmusacchio.github.io" target="_blank">Pierre E. Musacchio</a></h5>
 			2023 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
