index page update

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
+					2025.09. Our <a href="publications.html#Lee_OpenBox_NeurIPS_2025">automatic open-set 3D anotation method</a> is selected as a spotlight paper at <b>NeurIPS 2025</b>.
+				</li>
+				<li class="list-group-item">
 					2025.09. <b>Four papers</b> about <a href="publications.html#Lee_OpenBox_NeurIPS_2025">3D anotation</a>, <a href="publications.html#Kim_MetropolisHastings_NeurIPS_2025">GS sampling</a>, <a href="publications.html#Musacchio_Holistic_NeurIPS_2025">order prediction</a>, and <a href="publications.html#Jeon_TreeGuided_NeurIPS_2025">diffusion planner</a> are accepted to <b>NeurIPS 2025</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.04. Open3D is featured in <a href="https://www.oreilly.com/library/view/3d-data-science/9781098161323/" target="_blank">3D Data Science with Python</a> book published by O'Reilly Media (<a href="https://www.amazon.com/_/dp/1098161335?smid=ATVPDKIKX0DER&_encoding=UTF8&tag=oreilly20-20>" target="_blank">Buy at Amazon</a>).
 				</li>
-				<li class="list-group-item">
-					2025.02. <b>Three papers</b> about <a href="publications.html#Kim_ShowMak3r_CVPR_2025">dynamic scene reconstruction</a> and <a href="publications.html#Kim_Improving_CVPR_2025">image generation</a> are accepted to <b>CVPR 2025</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2025.02. <b>Three papers</b> about <a href="publications.html#Kim_ShowMak3r_CVPR_2025">dynamic scene reconstruction</a> and <a href="publications.html#Kim_Improving_CVPR_2025">image generation</a> are accepted to <b>CVPR 2025</b>.
+					</li>
 					<li class="list-group-item">
 						2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
 					</li>
