--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
-					2025.09. Our <a href="publications.html#Lee_OpenBox_NeurIPS_2025">automatic open-set 3D anotation method</a> is selected as a spotlight paper at <b>NeurIPS 2025</b>.
+					2025.09. Our <a href="publications.html#Lee_OpenBox_NeurIPS_2025">OpenBox</a>, an automatic open-set 3D anotation method, is selected as a spotlight paper at <b>NeurIPS 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2025.09. <b>Four papers</b> about <a href="publications.html#Lee_OpenBox_NeurIPS_2025">3D anotation</a>, <a href="publications.html#Kim_MetropolisHastings_NeurIPS_2025">GS sampling</a>, <a href="publications.html#Musacchio_Holistic_NeurIPS_2025">order prediction</a>, and <a href="publications.html#Jeon_TreeGuided_NeurIPS_2025">diffusion planner</a> are accepted to <b>NeurIPS 2025</b>.
