adding instaorder code

--- a/publications.html
+++ b/publications.html
@@ -128,6 +128,7 @@
 				<em>Int. Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://github.com/SNU-VGILab/InstaOrder" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Musacchio_Holistic_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Musacchio_Holistic_NeurIPS_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Musacchio_Holistic_NeurIPS_2025_bibtex_button">
