adding admin officer on the lab page

--- a/lab.html
+++ b/lab.html
@@ -113,6 +113,11 @@
 		</div>
 		<h3>Members</h3>
 		<div class="col-md-2 text-center">
+			<img src="source/members/admin.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5>Bohwa Jeon</h5>
+			jeon1015[at]snu.ac.kr			Administrative Officer<br>
+		</div>
+		<div class="col-md-2 text-center">
 			<img src="source/members/eunsun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://eunsunlee.github.io/" target="_blank">Eun Sun Lee</a></h5>
 			2025 Fall - current<br>
