--- a/lab.html
+++ b/lab.html
@@ -115,7 +115,8 @@
 		<div class="col-md-2 text-center">
 			<img src="source/members/admin.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5>Bohwa Jeon</h5>
-			jeon1015[at]snu.ac.kr			Administrative Officer<br>
+			jeon1015 [at] snu.ac.kr<br>
+			Administrative Officer<br>
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/eunsun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
