Code and ArXiv link for OMG4

--- a/publications.html
+++ b/publications.html
@@ -72,10 +72,12 @@
 			<h4>Optimzied Minimal 4D Gaussian Splatting</h4>
 			<p class="text-muted">
 				Minseo Lee, Byeonghyeon Lee, Lucas Yunkyu Lee, Eunsoo Lee, Sangmin Kim, Seunghyeon Song, Joo Chan Lee, Jong Hwan Ko, <b>Jaesik Park</b>, and Eunbyung Park.
-				<em>2510.XXXXX (arXiv), 2025</em>
+				<em>2510.03857 (arXiv), 2025</em>
 			</p>
 			<p>
 				<a href="https://minshirley.github.io/OMG4" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2510.03857" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/MinShirley/OMG4" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Optimzied_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_Optimzied_arXiv_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_Optimzied_arXiv_2025_bibtex_button">
@@ -85,7 +87,7 @@
 							@article{Lee_Optimzied_arXiv_2025,<br>
 							Title={Optimzied Minimal 4D Gaussian Splatting},<br>
 							Author={Minseo Lee and Byeonghyeon Lee and Lucas Yunkyu Lee and Eunsoo Lee and Sangmin Kim and Seunghyeon Song and Joo Chan Lee and Jong Hwan Ko and Jaesik Park and Eunbyung Park},<br>
-							Journal={2510.XXXXX (arXiv)},<br>
+							Journal={2510.03857 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
