--- a/publications.html
+++ b/publications.html
@@ -684,11 +684,12 @@
 			<p class="text-muted">
 				Minguk Kang, Richard Zhang, Connelly Barnes, Sylvain Paris, Suha Kwak, <b>Jaesik Park</b>, Eli Shechtman, Jun-Yan Zhu, and Taesung Park.
 				<em>European Conf. on Computer Vision (<b>ECCV</b>), 2024</em>
+				<br><a class="github-button" href="https://github.com/mingukkang/elatentlpips" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star mingukkang/elatentlpips on GitHub">Star</a><a class="github-button" href="https://github.com/mingukkang/elatentlpips/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork mingukkang/elatentlpips on GitHub">Fork</a>
 			</p>
 			<p>
 				<a href="https://mingukkang.github.io/Diffusion2GAN/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2405.05967" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a href="https://github.com/SNU-VGILab/e-latentlpips" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a href="https://github.com/mingukkang/elatentlpips" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Distilling_ECCV_2024_bibtex_button" aria-expanded="false" aria-controls="Kang_Distilling_ECCV_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kang_Distilling_ECCV_2024_bibtex_button">
