adding instantdrag arxiv link

--- a/publications.html
+++ b/publications.html
@@ -660,6 +660,7 @@
 			</p>
 			<p>
 				<a href="https://joonghyuk.com/instantdrag-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2409.08857" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/SNU-VGILab/InstantDrag" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button" aria-expanded="false" aria-controls="Shin_InstantDrag_SIGGRAPH_Asia_2024_bibtex_button">BibTeX</a>
 			</p>
@@ -715,6 +716,7 @@
 				<em>European Conf. on Computer Vision (<b>ECCV</b>), 2024</em>
 			</p>
 			<p>
+				<a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/papers/03794.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Deep_ECCV_2024_bibtex_button" aria-expanded="false" aria-controls="Kim_Deep_ECCV_2024_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Deep_ECCV_2024_bibtex_button">
