adding source code link for cf3 paper

--- a/publications.html
+++ b/publications.html
@@ -323,6 +323,7 @@
 			<p>
 				<a href="https://jjoonii.github.io/cf3-website/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://www.arxiv.org/abs/2508.05254" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/SNU-VGILab/CF3" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_CF3_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_CF3_ICCV_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_CF3_ICCV_2025_bibtex_button">
