--- a/data/news.html
+++ b/data/news.html
@@ -1,4 +1,5 @@
 [banner] 🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
+2025.10. I am honored to serve as an <b>Associate Editor</b> for IEEE Trans. on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>).
 2025.10. I will serve as a Lead Area Chair for <b>CVPR 2026</b>.
 2025.09. Our <a href="publications.html#Lee_OpenBox_NeurIPS_2025">OpenBox</a>, an automatic open-set 3D anotation method, is selected as a <b>spotlight paper</b> at NeurIPS 2025.
 2025.09. <b>Four papers</b> about <a href="publications.html#Lee_OpenBox_NeurIPS_2025">3D anotation</a>, <a href="publications.html#Kim_MetropolisHastings_NeurIPS_2025">GS sampling</a>, <a href="publications.html#Musacchio_Holistic_NeurIPS_2025">order prediction</a>, and <a href="publications.html#Jeon_TreeGuided_NeurIPS_2025">diffusion planner</a> are accepted to <b>NeurIPS 2025</b>.
