adding TDP code

--- a/publications.html
+++ b/publications.html
@@ -158,6 +158,7 @@
 			<p>
 				<a href="https://tree-diffusion-planner.github.io" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2508.21800" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/SNU-VGILab/TDP" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeon_TreeGuided_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Jeon_TreeGuided_NeurIPS_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Jeon_TreeGuided_NeurIPS_2025_bibtex_button">
@@ -212,6 +213,7 @@
 			<p>
 				<a href="https://hjhyunjinkim.github.io/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2506.12945" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/hjhyunjinkim/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_MetropolisHastings_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_MetropolisHastings_NeurIPS_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_MetropolisHastings_NeurIPS_2025_bibtex_button">
@@ -350,6 +352,7 @@
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2508.07519" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/SNU-VGILab/exploring-mmdit" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Exploring_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Exploring_ICCV_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Exploring_ICCV_2025_bibtex_button">
