--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
+					2025.10. I am honored to serve as an <b>Associate Editor</b> for IEEE Trans. on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>).
+				</li>
+				<li class="list-group-item">
 					2025.10. I will serve as a Lead Area Chair for <b>CVPR 2026</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.06. <b>Three papers</b> about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
 				</li>
-				<li class="list-group-item">
-					2025.05. GigaGAN is referred to as one of the most cited papers in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2025.05. GigaGAN is referred to as <b>one of the most cited papers</b> in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
+					</li>
 					<li class="list-group-item">
 						2025.04. Open3D is featured in <a href="https://www.oreilly.com/library/view/3d-data-science/9781098161323/" target="_blank">3D Data Science with Python</a> book published by O'Reilly Media (<a href="https://www.amazon.com/_/dp/1098161335?smid=ATVPDKIKX0DER&_encoding=UTF8&tag=oreilly20-20>" target="_blank">Buy at Amazon</a>).
 					</li>
