adding MotionStream paper

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Shin_MotionStream_arXiv_2025">
+			<img src="publications/data/25_arxiv10.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
+			<p class="text-muted">
+				Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, <b>Jaesik Park</b>, Eli Schechtman, and Xun Huang.
+				<em>2511.01266 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://joonghyuk.com/motionstream-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2511.01266" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_MotionStream_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_MotionStream_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_MotionStream_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Shin_MotionStream_arXiv_2025,<br>
+							Title={MotionStream: Real-Time Video Generation with Interactive Motion Controls},<br>
+							Author={Joonghyuk Shin and Zhengqi Li and Richard Zhang and Jun-Yan Zhu and Jaesik Park and Eli Schechtman and Xun Huang},<br>
+							Journal={2511.01266 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Jung_Targetless_arXiv_2025">
 			<img src="publications/data/25_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting</h4>
