adding pdf for iccv workshop paper

--- a/publications.html
+++ b/publications.html
@@ -405,6 +405,7 @@
 				<em>Workshop on Efficient Computing under Limited Resources (ECLR) <b>ICCV workshop</b>, 2025</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2510.14705" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Leveraging_ECLR_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Leveraging_ECLR_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Leveraging_ECLR_2025_bibtex_button">
