adding TRACE paper

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Jo_TRACE_arXiv_2025">
+			<img src="publications/data/25_arxiv11.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>TRACE: Your Diffusion Model is Secretly an Instance Edge Detector</h4>
+			<p class="text-muted">
+				Sanghyun Jo, Ziseok Lee, Wooyeol Lee, Jonghyun Choi, <b>Jaesik Park</b>, and Kyungsu Kim.
+				<em>2503.07982 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2503.07982" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jo_TRACE_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jo_TRACE_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jo_TRACE_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Jo_TRACE_arXiv_2025,<br>
+							Title={TRACE: Your Diffusion Model is Secretly an Instance Edge Detector},<br>
+							Author={Sanghyun Jo and Ziseok Lee and Wooyeol Lee and Jonghyun Choi and Jaesik Park and Kyungsu Kim},<br>
+							Journal={2503.07982 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Shin_MotionStream_arXiv_2025">
 			<img src="publications/data/25_arxiv10.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
