adding jungi hong and update lab.html

--- a/lab.html
+++ b/lab.html
@@ -246,6 +246,30 @@
 			2025 Fall - current<br>
 			A humanoid with tactile hands<br>
 		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/eunsung.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5>Eunsung Cha</h5>
+			2026 Spring - current<br>
+			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/jungi.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5>Jungi Hong</h5>
+			2026 Spring - current<br>
+			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/soonho.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5><a href="https://www.linkedin.com/in/soonho-kim" target="_blank">Soonho Kim</a></h5>
+			2026 Spring - current<br>
+			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/sunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5>Sunghyun Choi</h5>
+			2026 Spring - current<br>
+			Master's student<br>
+		</div>
 	</div>
 </div>
 <div class="container mt-4">
